# modelio-xmi2py

./: README.md  pyproject.toml
docs/: 00_project_scope.md  01_architecture.md  02_modelio_xmi_contract.md  03_mapping_spec.md  04_cli_spec.md  05_testing_strategy.md  99_codex_playbook.md
src/modelio_xmi2py/: cli.py  exceptions.py  logging.py
src/modelio_xmi2py/generator/: writer.py
src/modelio_xmi2py/ir/: uml.py  xmi.py
src/modelio_xmi2py/parser/: modelio_xmi.py  resolve.py
tests/: test_associations.py  test_cli.py  test_golden.py  test_real_modelio_smoke.py  test_resolve.py  test_xmi_ir.py
tests/fixtures/expected/association_basic/: model_gen.py
tests/fixtures/expected/inheritance_basic/: model_gen.py
tests/fixtures/expected/real/: model_gen.py
tests/fixtures/expected/simple/: model_gen.py
tests/fixtures/expected/types_basic/: model_gen.py
tests/fixtures/modelio/: inheritance_basic.xmi  simple.xmi  types_basic.xmi
tests/fixtures/modelio/real/: library.xmi
tests/fixtures/xmi/: association_basic.xmi  resolve_href_fragment.xmi  resolve_idref.xmi  resolve_missing_href.xmi  resolve_order_reversed.xmi
